Reetan.Nayak Dev 25/force-app/main/default/objects/dca_cnvrt_note__Convert_Notes_to_ContentNotes_Settings__c/dca_cnvrt_note__Convert_Notes_to_ContentNotes_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls when and how certain notes are converted to enhanced notes.</description>
    <label>Convert Notes to ContentNotes Settings</label>
</CustomObject>