Reetan.Nayak Dev 25/force-app/main/default/objects/dca_cnvrt_note__Convert_Notes_to_ContentNotes_Settings__c/fields/dca_cnvrt_note__Convert_in_Near_Real_Time__c.field-meta.xml
<CustomField>
    <fullName>dca_cnvrt_note__Convert_in_Near_Real_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables &apos;after insert&apos; trigger on Note that enqueues job to convert into ContentNotes in near real-time. This async conversion does not slow down save transaction, and if &apos;Delete Notes&apos; option is enabled then deletes in separate transaction too.</description>
    <inlineHelpText>Enables &apos;after insert&apos; trigger on Note that enqueues job to convert into ContentNotes in near real-time. This async conversion does not slow down save transaction, and if &apos;Delete Notes&apos; option is enabled then deletes in separate transaction too.</inlineHelpText>
    <label>Convert in Near Real Time?</label>
    <type>Checkbox</type>
</CustomField>