Reetan.Nayak Dev 25/force-app/main/default/objects/dca_cnvrt_note__Convert_Notes_to_ContentNotes_Settings__c/fields/dca_cnvrt_note__Delete_Note_Once_Converted__c.field-meta.xml
<CustomField>
    <fullName>dca_cnvrt_note__Delete_Note_Once_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked then conversion process will delete the original Note once successfully converted to ContentNote. You may want to delete them to save storage space in your org.</description>
    <inlineHelpText>When checked then conversion process will delete the original Note once successfully converted to ContentNote. You may want to delete them to save storage space in your org.</inlineHelpText>
    <label>Delete Note Once Converted?</label>
    <type>Checkbox</type>
</CustomField>