Reetan.Nayak Dev 25/force-app/main/default/objects/dca_cnvrt_note__Convert_Notes_to_ContentNotes_Settings__c/fields/dca_cnvrt_note__Share_Private_Notes__c.field-meta.xml
<CustomField>
    <fullName>dca_cnvrt_note__Share_Private_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated since version 1.3. Do not use.</description>
    <inlineHelpText>Deprecated since version 1.3. Do not use.</inlineHelpText>
    <label>Share Private Notes? (deprecated)</label>
    <type>Checkbox</type>
</CustomField>